# jkt-hackathon-2026

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
.kiro/steering/: hackathon-scoring-checklist.md
auth-service/: .dockerignore  Dockerfile  buildspec.yml  docker-entrypoint.sh  pom.xml
bedrock/: __init__.py  bedrock_client.py  cli.py  config.py  observability.py  test_bedrock_errors.py  test_bedrock_response.py  test_config.py  test_observability.py  test_observability_enable.py
bedrock-poc-rudi/: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  verify_setup.py
bedrock-poc-rudi/alerts/: database_slowdown.yaml  demo_live.json  example_alert.yaml  high_error_rate.json
bedrock-poc-rudi/config/: agent.yaml
bedrock-poc-rudi/dummy_app/: README.md
bedrock-poc-rudi/dummy_app/services/: orders.py
bedrock-poc-rudi/scripts/: show_insights.py
bedrock-poc-rudi/src/: __init__.py  agent.py  bedrock_client.py  blast_radius.py  config.py  events.py  git_tools.py  main.py  mcp_client.py  observability.py
bedrock-poc-rudi/tests/: __init__.py  test_agent.py  test_bedrock_client.py  test_blast_radius.py  test_config.py  test_events.py  test_git_tools.py  test_mcp_client.py  test_observability.py
bedrock-poc-rudi/tests/integration/: __init__.py  test_bedrock_real.py  test_mcp_real.py
docs/: HIGH_LEVEL_DESIGN.md
ops-simulator/: Dockerfile  buildspec.yml  dependency-reduced-pom.xml  docker-entrypoint.sh  pom.xml
shared/: SCORING.md  dashboard.tf  dd_mcp_setup.json  variables.tf
sre-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  buildspec.yml  demo.py  deploy.sh  docker-compose.yml  requirements.txt
track-aiops/: basic-bedrock-call.py  bedrock-decorator-example.py  bedrock-mcp-agent.py
track_aiops/: test_bedrock_client.py  test_bedrock_request.py  test_cli.py  test_observability_annotate.py
(+77 files in other folders)
