[project]
name = "incident-response-agent"
version = "1.0.0"
description = "Autonomous incident response agent using AWS Bedrock and Datadog"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "ddtrace>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "mcp>=0.9.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.9",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
